feat: create development user login for swag tests
