# docs/swagger.yaml
@@ -73,6 +73,21 @@ info:
   title: Flizix API
   version: "1.0"
 paths:
+  /auth/dev-login:
+    post:
+      description: Omits Telegram validation and generate a JWT token for a testing
+        user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Development login
+      tags:
+      - auth
   /auth/logout:
     post:
       description: Delete cookie on browser session sending an expired cookie
@@ -110,6 +125,26 @@ paths:
       tags:
       - auth
   /cards:
+    get:
+      description: Get all credit and debit cards for the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/api.CardResponse'
+            type: array
+        "401":
+          description: Not authorized
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: List all cards
+      tags:
+      - cards
     post:
       consumes:
       - application/json
